fix: workflow dir

--- a/.github/workflows/api-next-build.yml
+++ b/.github/workflows/api-next-build.yml
@@ -50,7 +50,6 @@ jobs:
       - name: Remove Some Cache
         if: matrix.os == 'windows-latest'
         run: |
-          cd api-next
           rm target/release/gn_root -Recurse -ErrorAction Ignore
           rm target/debug/gn_root -Recurse -ErrorAction Ignore
 
@@ -63,4 +62,4 @@ jobs:
       - name: Build
         env:
           RUST_BACKTRACE: 1
-        run: cd api-next && cargo build
+        run: cargo build
