--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,4 @@ actix-multipart = "0.2.0"
 sanitize-filename = "0.2"
 futures = "0.3.1"
 failure = "0.1.8"
+postgres-types = {version = "0.1.0", features = ["derive", "with-serde_json-1"]}
