--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "nest-api-rust"
 version = "0.1.0"
-authors = ["Divy Srivastava <dj.srivastava23@gmail.com>"]
+authors = ["Divy Srivastava <dj.srivastava23@gmail.com>", "John Letey <johnletey@gmail.com>"]
 edition = "2018"
 
 [dependencies]
