--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ env_logger = "0.7.1"
 serde = "1.0.103"
 serde_json = "1.0.44"
 serde_derive = "1.0.103"
-juniper = "0.14.2"
+juniper = { git = "https://github.com/graphql-rust/juniper", branch = "master" }
 tokio-postgres = { version = "0.5.4", features = ["with-chrono-0_4"] }
 tokio = "0.2.21"
 postgres_array = "0.10.0"
